# truedatabroadband-subsriber-management-system

./: .env.example  .gitignore  .replit  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted--workspace-frontend-npm-run-build-truedata-frontend-0-1_1781664794255.txt  Pasted-Create-a-professional-invoice-PDF-template-for-True-Dat_1781626380837.txt  Pasted-You-are-a-senior-full-stack-architect-Create-the-founda_1781585802892.txt  Pasted-You-are-continuing-development-of-the-existing-project-_1781587539382.txt  Pasted-You-are-continuing-development-of-the-existing-project-_1781588680202.txt  Pasted-You-are-continuing-development-of-the-existing-project-_1781596624228.txt  Pasted-You-are-continuing-development-of-the-existing-project-_1781598522755.txt  Pasted-You-are-continuing-development-of-the-existing-project-_1781610891669.txt  Pasted-You-are-continuing-development-of-the-existing-project-_1781612369888.txt  Pasted-You-are-continuing-development-of-the-existing-project-_1781665862267.txt  Pasted-You-are-continuing-development-of-the-existing-project-_1781666764122.txt  Pasted-You-are-continuing-development-of-the-existing-project-_1781667104166.txt  Pasted-You-are-continuing-development-of-the-existing-project-_1781674541005.txt  Pasted-You-are-continuing-development-of-the-existing-project-_1781679024742.txt  Pasted-You-are-continuing-development-of-the-existing-project-_1781682231180.txt  Pasted-You-are-continuing-development-of-the-existing-project-_1781682460603.txt  (+4 more)
backend/: .dockerignore  Dockerfile  (+3 more)
(+316 files in other folders)
